# baubot

./: Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
baubot-core/: .gitignore  Cargo.toml  README.md
baubot-core/src/: broadcaster.rs  lib.rs  prelude.rs  tests.rs
baubot-core/src/broadcaster/: types.rs
baubot-core/tests/: integration.rs
baubot-data/: Cargo.toml
baubot-data/src/: lib.rs  test_db.rs
baubot-server/: Cargo.toml  server.env
baubot-server/src/: lib.rs  prelude.rs  tests.rs
baubot-server/src/prelude/: types.rs
baubot-utils/: Cargo.toml  build.rs
baubot-utils/src/: lib.rs
tests/: core.rs
