[workspace.package]
version = "0.1.0"
authors = ["babagreensheep"]
edition = "2021"
description = "Wrapper around teloxide to receive and send simple messages."
licence-file = "LICENCE"
repository = "https://github.com/babagreensheep/baubot"
readme = "README.md"

[workspace]
members = ["baubot-core", "baubot-data", "baubot-server", "baubot-utils"]
resolver = "2"
