[package]
name = "baubot-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
licence-file.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
native-tls = "0.2.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
teloxide = { version = "0.13.0", features = ["nightly", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
