[package]
name = "baubot-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
licence-file.workspace = true
repository.workspace = true

[features]
test-utils = ["dep:dotenvy", "dep:env_logger"]

[dependencies]
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
teloxide = { version = "0.13.0", features = ["nightly", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
# implemented only to propogate test-utils acrosss the board
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.5", optional = true }
serde_json = "1.0.132"

[dev-dependencies]
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.5" }
