[package]
name = "baubot-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
licence-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
teloxide = { version = "0.13.0", features = ["nightly", "macros"] }
# TODO: check features set
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.132"

[dev-dependencies]
env_logger = { version = "0.11.5" }
baubot-utils = { path = "../baubot-utils" }
baubot-data = { path = "../baubot-data", features = ["test-utils"] }
