[package]
name = "baubot-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
licence-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
baubot-core = { path = "../baubot-core" }
baubot-utils = { path = "../baubot-utils", optional = true }
tokio = { version = "1.41.1", features = ["sync"] }

[features]
test-utils = ["dep:baubot-utils"]

