[package]
name = "baubot-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
licence-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"

[build-dependencies]
dotenvy = "0.15.7"
